--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,14 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+board: [ "nice_nano" ]
+shield: [ "corne_left", "corne_right" ]
+include:
+  - board: bdn9_rev2
+  - board: nice_nano
+    shield: reviung41
+  - board: nice_nano
+    shield: corne_left
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    artifact-name: corne_left_with_studio
